--- a/src/components/CommonSection/CommonSection.scss
+++ b/src/components/CommonSection/CommonSection.scss
@@ -74,7 +74,7 @@
     align-items: center;
     display: flex;
     flex-direction: column;
-    gap: 40px;
+    gap: 90px;
     position: relative;
     z-index: 2;
 
@@ -104,6 +104,10 @@
 
     &--align-left {
       align-items: flex-start;
+    }
+
+    &--switch-order {
+      order: 10;
     }
   }
 
@@ -181,6 +185,38 @@
     }
   }
 
+  &__list {
+    align-items: flex-start;
+    display: flex;
+    flex-direction: column;
+    gap: 24px;
+    margin: 31px 0;
+  }
+
+  &__item-text {
+    align-items: center;
+    color: $black-color;
+    display: flex;
+    font-family: $font-inter;
+    font-size: 16px;
+    font-weight: 400;
+    font-size: 18px;
+    line-height: 28px;
+
+    span svg {
+      background-color: $black-color;
+      border-radius: 50%;
+      height: 18px;
+      margin: 0 15px 0 0;
+      padding: 3px;
+      width: 18px;
+
+      path {
+        fill: $white-color;
+      }
+    }
+  }
+
   &__button {
     width: max-content;
 
@@ -225,6 +261,12 @@
   }
 
   &__image {
+    img {
+      width: 100%;
+    }
+  }
+
+  &__bottom-image {
     margin: 0 auto;
     max-width: 1220px;
     position: relative;
