--- a/src/components/StepCards/StepCards.scss
+++ b/src/components/StepCards/StepCards.scss
@@ -1,7 +1,7 @@
 @import "../../styles/variables";
 @import "../../styles/mixins";
 
-.step-cards-section {
+.step-cards {
   display: flex;
   justify-content: space-between;
   gap: 24px;
