refactor: use mixins for title, subtitles and descriptions across the project

--- a/src/components/CommonSection/CommonSection.scss
+++ b/src/components/CommonSection/CommonSection.scss
@@ -112,34 +112,11 @@
   }
 
   &__title {
-    color: $black-color;
-    font-family: $font-spoof-trail;
-    font-size: 90px;
-    font-style: normal;
-    font-weight: 800;
-    justify-content: center;
-    line-height: 110px;
-    text-align: center;
-
-    span {
-      @include animatedHighlight;
-      padding: 0 10px;
-    }
+    @include titleSpoofTrail;
   }
 
   &__subtitle {
-    color: $black-color;
-    text-align: center;
-    font-family: $font-spoof-trail;
-    font-size: 50px;
-    font-style: normal;
-    font-weight: 700;
-    line-height: 60px;
-
-    span {
-      @include animatedHighlight;
-      padding: 0 10px;
-    }
+    @include subtitleSpoofTrailBig;
   }
 
   &__item {
@@ -167,15 +144,9 @@
   }
 
   &__description {
+    @include descriptionSpoofTrail;
     align-items: center;
-    color: $black-color;
     display: flex;
-    text-align: center;
-    font-family: $font-spoof-trail;
-    font-size: 18px;
-    font-style: normal;
-    font-weight: 400;
-    line-height: 28px;
     gap: 30px;
 
     span {
@@ -275,6 +246,7 @@
   &__bottom-image {
     margin: 0 auto;
     max-width: 1220px;
+    padding: 0 30px;
     position: relative;
     z-index: 1;
 
