--- a/src/components/Theme/Theme.scss
+++ b/src/components/Theme/Theme.scss
@@ -66,27 +66,11 @@
     }
 
     &__title {
-      color: $black-color;
-      font-family: $font-spoof-trail;
-      font-size: 50px;
-      font-style: normal;
-      font-weight: 700;
-      line-height: 60px;
-      text-align: left;
-
-      span {
-        @include animatedHighlight;
-        padding: 0 10px;
-      }
+      @include subtitleSpoofTrailBig;
     }
 
     &__description {
-      color: $black-color;
-      font-family: $font-inter;
-      font-size: 16px;
-      font-style: normal;
-      font-weight: 400;
-      line-height: 30px;
+      @include descriptionInter;
     }
 
     &__image {
@@ -258,15 +242,10 @@
   }
 
   &__title {
+    @include titleInter;
     align-items: center;
-    color: $black-color;
     display: flex;
-    font-family: $font-inter;
-    font-size: 20px;
-    font-style: normal;
-    font-weight: 700;
     justify-content: space-between;
-    line-height: 32px;
 
     span {
       align-items: center;
@@ -280,13 +259,9 @@
   }
 
   &__description {
-    overflow: hidden;
+    @include descriptionInterBig;
     color: $grey-color-darker;
+    overflow: hidden;
     text-overflow: ellipsis;
-    font-family: $font-inter;
-    font-size: 18px;
-    font-style: normal;
-    font-weight: 400;
-    line-height: 28px;
   }
 }
