--- a/src/components/AnimatedCard/AnimatedCard.scss
+++ b/src/components/AnimatedCard/AnimatedCard.scss
@@ -99,28 +99,11 @@
   }
 
   &__title {
-    color: $black-color;
-    font-family: $font-spoof-trail;
-    font-size: 45px;
-    font-style: normal;
-    font-weight: 700;
-    line-height: 50px;
-    text-align: left;
-
-    span {
-      @include animatedHighlight;
-      padding: 0 10px;
-      line-height: 66px;
-    }
+    @include subtitleSpoofTrailBig;
   }
 
   &__description {
-    color: $black-color;
-    font-family: $font-inter;
-    font-size: 16px;
-    font-style: normal;
-    font-weight: 400;
-    line-height: 30px;
+    @include descriptionInter;
     max-width: 350px;
   }
 
