--- a/src/components/Compliance/Compliance.scss
+++ b/src/components/Compliance/Compliance.scss
@@ -9,14 +9,7 @@
   }
 
   &__title {
-    color: $black-color;
-    font-family: $font-spoof-trail;
-    font-size: 90px;
-    font-style: normal;
-    font-weight: 800;
-    line-height: 95px;
-    margin: 0 0 24px 0;
-    text-align: center;
+    @include titleSpoofTrail;
   }
 
   &__section {
@@ -25,23 +18,13 @@
   }
 
   &__subtitle {
-    color: $black-color;
-    font-family: $font-spoof-trail;
-    font-size: 24px;
-    font-style: normal;
-    font-weight: 700;
-    line-height: 40px;
+    @include subtitleSpoofTrail;
   }
 
   &__description {
-    color: $black-color;
+    @include descriptionInterBig;
     display: flex;
     flex-direction: column;
-    font-family: $font-inter;
-    font-size: 18px;
-    font-style: normal;
-    font-weight: 400;
-    line-height: 28px;
     margin: 18px 0;
   }
 }
