--- a/src/components/Content/Content.scss
+++ b/src/components/Content/Content.scss
@@ -46,12 +46,7 @@
   }
 
   &__title {
-    font-family: $font-spoof-trail;
-    font-size: 50px;
-    font-style: normal;
-    font-weight: 700;
-    line-height: 60px;
-    text-align: center;
+    @include subtitleSpoofTrailBig;
 
     &--white {
       color: $white-color;
@@ -60,21 +55,10 @@
     &--black {
       color: $black-color;
     }
-
-    span {
-      @include animatedHighlight;
-      padding: 0 10px;
-    }
   }
 
   &__subtitle {
-    color: $black-color;
-    text-align: center;
-    font-family: $font-spoof-trail;
-    font-size: 18px;
-    font-style: normal;
-    font-weight: 600;
-    line-height: 28px;
+    @include subtitleSpoofTrailSmall;
 
     &--white {
       color: $white-color;
@@ -86,12 +70,7 @@
   }
 
   &__description {
-    text-align: center;
-    font-family: $font-spoof-trail;
-    font-size: 18px;
-    font-style: normal;
-    font-weight: 400;
-    line-height: 28px;
+    @include descriptionSpoofTrail;
 
     &--white {
       color: $white-color;
