--- a/src/components/Header/Dropdown/Dropdown.scss
+++ b/src/components/Header/Dropdown/Dropdown.scss
@@ -104,10 +104,8 @@
   }
 
   &__subtitle {
+    @include titleInterSmall;
     color: $grey-color-darker;
-    font-family: $font-inter;
-    font-size: 16px;
-    font-style: normal;
     font-weight: 400;
     line-height: normal;
     text-transform: uppercase;
