--- a/src/components/IconCards/IconCard/IconCard.scss
+++ b/src/components/IconCards/IconCard/IconCard.scss
@@ -54,27 +54,13 @@
   }
 
   &__title {
-    color: $black-color;
-    text-align: center;
-    font-family: $font-inter;
-    font-size: 20px;
-    font-style: normal;
-    font-weight: 700;
-    line-height: 32px;
+    @include titleInter;
     margin: 16px 0 24px;
-    text-align: center;
   }
 
   &__description {
-    color: $black-color;
-    text-align: center;
-    font-family: $font-inter;
-    font-size: 18px;
-    font-style: normal;
-    font-weight: 400;
-    line-height: 28px;
+    @include descriptionSpoofTrail;
     margin: 0 0 auto 0;
-    text-align: center;
   }
 
   &__link {
