--- a/src/components/PartnersSection/PartnersSection.scss
+++ b/src/components/PartnersSection/PartnersSection.scss
@@ -12,18 +12,7 @@
   }
 
   &__title {
-    color: $black-color;
-    font-family: $font-spoof-trail;
-    font-size: 50px;
-    font-style: normal;
-    font-weight: 700;
-    line-height: 60px;
-    text-align: center;
-
-    span {
-      @include animatedHighlight;
-      padding: 0 10px;
-    }
+    @include subtitleSpoofTrailBig;
   }
 
   &__logos {
