--- a/src/components/ShipPartners/ShipPartners.scss
+++ b/src/components/ShipPartners/ShipPartners.scss
@@ -10,12 +10,7 @@
   }
 
   &__title {
-    color: $black-color;
-    font-family: $font-inter;
-    font-size: 20px;
-    font-style: normal;
-    font-weight: 700;
-    line-height: 32px;
+    @include titleInter;
   }
 
   &__list {
@@ -37,13 +32,7 @@
   }
 
   &__description {
+    @include descriptionInterBig;
     color: $grey-color-darker;
-    text-align: center;
-    font-family: $font-inter;
-    font-size: 18px;
-    font-style: normal;
-    font-weight: 400;
-    line-height: 28px;
-    max-width: 800px;
   }
 }
