--- a/src/components/StepCards/StepCards.scss
+++ b/src/components/StepCards/StepCards.scss
@@ -26,24 +26,15 @@
     }
 
     &__subtitle {
+      @include subtitleSpoofTrailSmall;
       color: $red-color;
-      text-align: center;
-      font-family: $font-spoof-trail;
-      font-size: 16px;
       font-style: normal;
       font-weight: 700;
-      line-height: 28px;
       margin: 16px 0 4px 0;
     }
 
     &__title {
-      color: $black-color;
-      text-align: center;
-      font-family: $font-spoof-trail;
-      font-size: 35px;
-      font-style: normal;
-      font-weight: 700;
-      line-height: 40px;
+      @include titleSpoofTrailSmall;
     }
   }
 }
