--- a/src/components/WebsitePlusMobileSection/WebsitePlusMobileSection.scss
+++ b/src/components/WebsitePlusMobileSection/WebsitePlusMobileSection.scss
@@ -41,28 +41,11 @@
   }
 
   &__title {
-    color: $black-color;
-    font-family: $font-spoof-trail;
-    font-size: 50px;
-    font-style: normal;
-    font-weight: 700;
-    line-height: 60px;
-    text-align: center;
-
-    span {
-      @include animatedHighlight;
-      padding: 0 10px;
-    }
+    @include subtitleSpoofTrailBig;
   }
 
   &__description {
-    color: $black-color;
-    text-align: center;
-    font-family: $font-spoof-trail;
-    font-size: 32px;
-    font-style: normal;
-    font-weight: 400;
-    line-height: 45px;
+    @include descriptionSpoofTrailVeryBig;
   }
 
   &__bottom {
