--- a/src/components/Accordions/Accordions.scss
+++ b/src/components/Accordions/Accordions.scss
@@ -65,16 +65,11 @@
     }
 
     &-title {
+      @include titleInter;
       align-items: center;
-      color: $black-color;
       background-color: transparent;
       display: flex;
-      font-family: $font-inter;
-      font-size: 20px;
-      font-style: normal;
-      font-weight: 700;
       justify-content: space-between;
-      line-height: 32px;
       width: 100%;
 
       span {
