--- a/src/components/Footer/Footer.scss
+++ b/src/components/Footer/Footer.scss
@@ -12,14 +12,46 @@
   &__nav {
     align-items: flex-start;
     display: flex;
+    flex-wrap: wrap;
     justify-content: space-between;
-    gap: 40px;
+    gap: 8px;
     width: 100%;
+    transition: all 150ms ease-in-out;
+
+    @media screen and (min-width: 768px) {
+      gap: 8px;
+    }
 
     &-list {
-      display: flex;
-      flex-direction: column;
-      gap: 28px;
+      display: grid;
+      grid-gap: 28px;
+      grid-template-rows: 0fr;
+      transition: all 250ms $animation-2;
+
+      &--active {
+        grid-template-rows: 1fr;
+        margin: 28px 0 0 0;
+
+        @media screen and (min-width: 768px) {
+          margin: 0;
+        }
+      }
+
+      > div {
+        display: flex;
+        flex-direction: column;
+        overflow: hidden;
+        gap: 28px;
+        transition: all 150ms ease-in-out;
+
+        @media screen and (min-width: 768px) {
+          overflow: unset;
+        }
+
+        @media screen and (min-width: 1024px) {
+          flex-wrap: nowrap;
+        }
+      }
 
       &-link {
         color: $black-color;
@@ -41,7 +73,17 @@
     align-items: flex-start;
     display: flex;
     flex-direction: column;
-    gap: 32px;
+    gap: 0;
+    width: 100%;
+    transition: all 150ms ease-in-out;
+
+    @media screen and (min-width: 768px) {
+      gap: 32px;
+    }
+
+    @media screen and (min-width: 865px) {
+      width: auto;
+    }
 
     &-list {
       align-items: center;
@@ -75,40 +117,106 @@
     }
   }
 
-  &__nav-column,
-  &__aside-column {
+  &__nav-column {
+    @include thinnerShadow;
+    background-color: $white-color-opacity;
+    border-radius: 24px;
+    cursor: pointer;
     display: flex;
     flex-direction: column;
-    gap: 32px;
+    overflow: hidden;
+    padding: 16px 24px;
+    transition: all 150ms ease-in-out;
+    width: calc(100% - 24px * 2);
+
+    &:hover {
+      background-color: $grey-color;
+    }
 
     &-title {
-      color: $black-color;
-      font-family: $font-inter;
-      font-size: 20px;
-      font-style: normal;
-      font-weight: 700;
-      line-height: 32px;
+      @include titleInter;
+      align-items: center;
+      display: flex;
+      text-align: left;
+
+      &--active {
+        span {
+          transform: rotate(180deg);
+        }
+      }
+
+      span {
+        align-items: center;
+        display: flex;
+        justify-content: center;
+        margin: 0 0 0 auto;
+        transition: all 250ms $animation-2;
+
+        @media screen and (min-width: 768px) {
+          display: none;
+        }
+      }
+    }
+
+    @media screen and (min-width: 768px) {
+      @include zeroShadow;
+      background-color: transparent;
+      border-radius: 0;
+      cursor: auto;
+      gap: 32px;
+      overflow: unset;
+      padding: 0;
+      width: auto;
+
+      &:hover {
+        background-color: transparent;
+      }
+    }
+  }
+
+  &__aside-column {
+    align-items: center;
+    display: flex;
+    flex-direction: column;
+    gap: 12px;
+    margin: 12px auto;
+
+    &-title {
+      @include titleInter;
+      text-align: left;
+    }
+
+    @media screen and (min-width: 768px) {
+      align-items: flex-start;
+      gap: 32px;
+      margin: 24px 0 0 0;
     }
   }
 
   &__copyright {
     @include container;
     align-items: center;
+    border-top: 1px solid rgba(0, 0, 0, 0.1);
     display: flex;
+    flex-direction: column;
     justify-content: space-between;
     gap: 32px;
     padding-bottom: 40px !important;
     padding-top: 32px !important;
 
+    @media screen and (min-width: 768px) {
+      flex-direction: row;
+    }
+
     &-text {
-      color: $black-color;
-      font-family: $font-inter;
-      font-size: 16px;
-      font-style: normal;
+      @include titleInterSmall;
       font-weight: 400;
-      line-height: 24px;
-      margin: 0 auto 0 0;
-      color: #000;
+      margin: 0;
+      text-align: center;
+
+      @media screen and (min-width: 768px) {
+        margin: 0 auto 0 0;
+      }
     }
 
     &-list {
