--- a/src/components/BannerSection/BannerSection.scss
+++ b/src/components/BannerSection/BannerSection.scss
@@ -7,7 +7,11 @@
   position: relative;
 
   > img {
+    left: 50%;
     position: absolute;
+    top: 50%;
+    transform: translate(-50%, -50%);
+    width: 100%;
     z-index: 0;
   }
 
