--- a/src/components/AnimatedCard/AnimatedCard.scss
+++ b/src/components/AnimatedCard/AnimatedCard.scss
@@ -90,12 +90,19 @@
     align-items: flex-start;
     display: flex;
     flex-direction: column;
-    gap: 23px;
-    height: calc(100% - 2 * 40px);
-    padding: 40px;
+    gap: 8px;
+    height: calc(100% - 2 * 15px);
+    padding: 15px;
     position: relative;
-    min-width: calc(100% - 2 * 40px);
+    min-width: calc(100% - 2 * 15px);
     z-index: 20;
+
+    @media screen and (min-width: 768px) {
+      gap: 23px;
+      height: calc(100% - 2 * 40px);
+      padding: 40px;
+      min-width: calc(100% - 2 * 40px);
+    }
   }
 
   &__title {
