--- a/src/components/CarouselSection/CarouselSection.scss
+++ b/src/components/CarouselSection/CarouselSection.scss
@@ -8,8 +8,14 @@
     @include container;
     align-items: center;
     display: flex;
+    flex-direction: column;
     justify-content: space-between;
-    gap: 113px;
+    gap: 30px;
+
+    @media screen and (min-width: 1024px) {
+      flex-direction: row;
+      gap: 113px;
+    }
 
     button {
       width: 52px !important;
@@ -29,8 +35,10 @@
   &__view {
     @include regularShadow;
     border-radius: 24px;
-    height: 464px;
-    min-width: 687px;
+    height: 260px;
+    min-width: 100%;
+    order: 10;
+    overflow: hidden;
     position: relative;
     transition: all 120ms ease-in-out;
 
@@ -41,6 +49,15 @@
 
     &:hover {
       transform: translateY(-10px) !important;
+    }
+
+    @media screen and (min-width: 425px) {
+      height: 464px;
+    }
+
+    @media screen and (min-width: 1024px) {
+      min-width: 50%;
+      order: 0;
     }
   }
 }
