--- a/src/components/Content/Content.scss
+++ b/src/components/Content/Content.scss
@@ -5,8 +5,12 @@
   align-items: center;
   display: flex;
   flex-direction: column;
-  gap: 26px;
+  gap: 20px;
   max-width: 700px;
+
+  @media screen and (min-width: 425px) {
+    gap: 26px;
+  }
 
   &--align-left {
     align-items: flex-start;
