feat: product tour mobile layout

--- a/src/components/Accordions/Accordions.scss
+++ b/src/components/Accordions/Accordions.scss
@@ -71,6 +71,7 @@
       display: flex;
       justify-content: space-between;
       width: 100%;
+      text-align: left;
 
       span {
         align-items: center;
