--- a/src/components/StepCards/StepCards.scss
+++ b/src/components/StepCards/StepCards.scss
@@ -3,8 +3,13 @@
 
 .step-cards {
   display: flex;
+  flex-wrap: wrap;
   justify-content: space-between;
   gap: 24px;
+
+  @media screen and (min-width: 1115px) {
+    flex-wrap: nowrap;
+  }
 
   .step-card {
     @include thinShadow;
@@ -15,14 +20,25 @@
     flex-direction: column;
     justify-content: flex-end;
     padding: 24px;
-    width: calc(100% / 3);
+    width: 100%;
+
+    @media screen and (min-width: 1115px) {
+      width: calc(100% / 3);
+    }
 
     &__image {
+      display: flex;
       position: relative;
-      width: 280px;
+      min-height: 280px;
+      width: 240px;
 
       > img {
+        margin: auto 0 0;
         width: 100%;
+      }
+
+      @media screen and (min-width: 425px) {
+        width: 280px;
       }
     }
 
