--- a/src/components/WebsitePlusMobileSection/WebsitePlusMobileSection.scss
+++ b/src/components/WebsitePlusMobileSection/WebsitePlusMobileSection.scss
@@ -91,11 +91,17 @@
     &-buttons {
       align-items: center;
       background-color: $grey-color;
-      border-radius: 90px;
+      border-radius: 24px;
       display: flex;
+      flex-direction: column;
       gap: 16px;
       justify-content: space-between;
       padding: 8px;
+
+      @media screen and (min-width: 650px) {
+        border-radius: 90px;
+        flex-direction: row;
+      }
     }
 
     &-button {
@@ -116,18 +122,28 @@
       z-index: 1;
 
       &--active {
+        background-color: $yellow-color;
         color: $black-color;
+
+        @media screen and (min-width: 650px) {
+          background-color: transparent;
+        }
       }
     }
 
     &-line {
       border-radius: 90px;
       background-color: $yellow-color;
+      display: none;
       height: 48px;
       position: absolute;
       transition: all 380ms $animation-2;
       width: 190px;
       z-index: 0;
+    }
+
+    @media screen and (min-width: 650px) {
+      display: block;
     }
   }
 
@@ -135,6 +151,8 @@
     display: flex;
     justify-content: center;
     margin: -40px auto 0 auto;
+    min-height: 150px;
+    max-width: 1200px;
     width: 100%;
     position: relative;
     transform: translate(0, 40px) !important;
@@ -143,11 +161,24 @@
     img {
       @include thinShadow;
       border-radius: 12px 12px 0px 0px;
+      position: absolute;
       width: 100%;
 
       @media screen and (min-width: 768px) {
         border-radius: 32px 32px 0px 0px;
       }
+    }
+
+    @media screen and (min-width: 415px) {
+      min-height: 200px;
+    }
+
+    @media screen and (min-width: 540px) {
+      min-height: 250px;
+    }
+
+    @media screen and (min-width: 650px) {
+      min-height: 300px;
     }
 
     @media screen and (min-width: 768px) {
@@ -156,6 +187,11 @@
     }
 
     @media screen and (min-width: 1024px) {
+      min-width: 900px;
+    }
+
+    @media screen and (min-width: 1260px) {
+      min-height: 560px;
       min-width: 900px;
     }
   }
